# nand2tetris

./: README.md
assembler/: .gitignore  CMakeLists.txt  Makefile  README.md  conandata.yml  conanfile.py
assembler/data/: add.asm
assembler/lib/: assemble.cpp  assemble.hpp
assembler/src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  assemble.cpp  assemble.h  main.cpp
assembler/src/assemble/: Assembler.cpp  Assembler.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  StringUtils.h  exception.h
assembler/test/: StringDiff.cpp  StringDiff.h  Utils.h  assemble_test.cpp  lexer_test.cpp  parser_test.cpp  test.cpp
assembly/project4/: fill.asm  mult_by_add.asm
jack/: Pebbles.jack
jack/compiler/: .gitignore  README.md  gen.sh  index.html  jest.config.cjs  jest.config.ts  jest.config1.ts  package-lock.json  package.json  pnpm-lock.yaml
jack/compiler/.antlr/: JackLexer.java  JackParser.java
jack/compiler/grammar/: JackParser.g4
jack/compiler/parser-gen/: JackLexer.g4  JackParser.g4  Makefile
jack/compiler/src/: Compiler.ts  Token.ts  Tokenizer.ts  TokenizerError.ts  VIsitor.ts  compiler.ts  consts.ts  error.listener.ts  error.ts  main.ts  symbol.table.istener.ts  symbol.table.ts  symbol.ts
jack/compiler/src/custom_impl/: token.ts  tokenizer.error.ts  tokenizer.ts
jack/compiler/src/listener/: binder.listener.ts  common.ts  error.listener.ts  validator.listener.ts  vm.writer.listener.ts
jack/compiler/test/: binder.listener.test.ts  compiler.test.ts  local.symbol.table.test.ts  parser.test.ts  test.helper.ts  tokenizer.test.ts  tokenizer.test.utils.ts  validator.listener.test.ts
jack/compiler/test/resources/: Main.jack
jack/compiler/test/resources/Fraction/: Fraction.vm
jack/compiler/test/resources/List/: List.vm
jack/compiler/test/resources/Square/: Square.vm  SquareGame.vm
jack/compiler/tests/: Main.jack  tokenizer.test.ts
jack/dino/: .gitignore  Makefile  README.md
jack/dino-game/: .gitignore  Makefile  README.md  build.sh  count_functions.py  fix_labels.py  stats.db
jack/dino-game/src/: Assert.jack  BigCactus.jack  Cactus.jack  CactusQueue.jack  CactusType.jack  Cloud.jack  CloudQueue.jack  CollisionDetector.jack  Common.jack  Counter.jack  Dino.jack  DinoGame.jack  ErrorCodes.jack  IntQueue.jack  Keys.jack  LogicalExpression.jack  Main.jack  MathCustom.jack  Pebbles.jack  ScreenCustom.jack  Test  Trail.jack
jack/dino-game/src/os/: Main.jack  MathC.jack  MathCustom.jack  MemoryCustom.jack  ScreenCustom.jack
jack/dino/image-converter/: CMakeLists.txt  Makefile  README.md  conandata.yml
jack/dino/image-converter/src/: main.cpp
jack/dino/image-converter/src/converter/: ImageConverter.cpp  ImageConverter.hpp  StringUtils.cpp  StringUtils.h
jack/dino/image-converter/test/: converter_test.cpp  dino.cpp  test.cpp
jack/dino/src/: BigCactus.jack  Cactus.jack  Cloud.jack  Dino.jack  Main.jack  ScreenCustom.jack  Trail.jack
jack/jack-image-converter/: CMakeLists.txt  Makefile  README.md  conanfile.txt
jack/jack-image-converter/src/: main.cpp
jack/jack-image-converter/src/converter/: ImageConverter.cpp  ImageConverter.hpp  Rectangle.h  StringUtils.h
jack/jack-image-converter/test/: converter_test.cpp
jack/jack-image-converter/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
jack/jack-image-converter/web/src/: image.converter.ts  main.ts  rectangle.ts  string.utils.ts
jack/os/: TODO.md  build.sh
jack/os/src/: ArrayCustom.jack  ArrayCustom.vm  Common.vm  KeyboardCustom.jack  KeyboardCustom.vm  Main.jack  Main.vm  MathCustom.jack  MathCustom.vm  MemoryCustom.jack  MemoryCustom.vm  OutputCustom.jack  OutputCustom.vm  ScreenCustom.jack  ScreenCustom.vm  StringCustom.jack  StringCustom.vm  SysCustom.jack  SysCustom.vm
logic_gates/project1/: And.hdl  And16.hdl  DMux.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
logic_gates/project2/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
logic_gates/project3/03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
logic_gates/project5/: cpu.hdl  memory.hdl
vm_translator/: .gitignore  CMakeLists.txt  Makefile  README.md  conandata.yml  conanfile.txt  config_example.toml
vm_translator/data/advanced/BasicLoop/: BasicLoopExtended.vm
vm_translator/data/advanced/FibonacciElement/: Main.vm
vm_translator/data/advanced/MyTest/: Linked.asm  Main.asm  Main.vm  Test.asm  Test.vm
vm_translator/data/advanced/SimpleFunction/: SimpleFunction.vm
vm_translator/data/advanced/dino/: Main.vm
vm_translator/data/simple/SimpleAdd/: SimpleAdd.cmp
vm_translator/src/: CMakeLists.txt  StringUtils.h  main.cpp
vm_translator/src/translator/: CMakeLists.txt  Config.h  ConfigParser.cpp  ConfigParser.h  Lexer.cpp  Lexer.h  Linker.cpp  Linker.h  MemorySegment.cpp  MemorySegment.h  MemorySegmentsParser.h  OrderChecker.h  Parser.h  StringUtils.h  Token.cpp  Token.h  Translator.cpp  Translator.h  TreeNode.cpp  Validator.h  assembly.h  exception.h
vm_translator/test/: StringDiff.h  Utils.h  config_parse_test.cpp  lexer_test.cpp  linker_test.cpp  memory_parser_test.cpp  order_checker_test.cpp  translator_file_advanced_test.cpp  translator_file_basic_test.cpp  translator_file_test.cpp  translator_test.cpp  validator_test.cpp
